--- a/Dokumentation/bibtex-daten/slammer16.bib
+++ b/Dokumentation/bibtex-daten/slammer16.bib
@@ -57,3 +57,15 @@
   Note                     = {Aufgerufen: 30.05.2017}
 }
 
+@Misc{EK,
+  Title                    = {Kalman Filter},
+  HowPublished             = {\url{http://www.mi.hs-rm.de/~schwan/Projects/CG/CarreraCV/doku/kalman/kalman.htm#2}},
+  Note                     = {Aufgerufen: 08.06.2017}
+}
+
+@Misc{EKF,
+  Title                    = {Extended Kalman Filter - SLAM},
+  HowPublished             = {\url{http://ais.informatik.uni-freiburg.de/teaching/ws13/mapping/pdf/slam05-ekf-slam.pdf}},
+  Note                     = {Aufgerufen: 08.06.2017}
+}
+
